Work. Much Awesome. Wow!

--- a/assets/__scss/main.scss
+++ b/assets/__scss/main.scss
@@ -64,6 +64,7 @@
 @import "components/main-nav";
 @import "components/introduction";
 @import "components/filters";
+@import "components/plugins";
 // @import "components/logo";
 // @import "components/branding";
 // @import "components/clients";
