--- a/assets/__scss/objects/_plugin.scss
+++ b/assets/__scss/objects/_plugin.scss
@@ -18,6 +18,7 @@ $plugin-subtitle-color:         #525C63;
     background-color: $plugin-background;
     border-radius: $base-box-round;
     padding: $spacing-unit;
+    margin-bottom: $spacing-unit;
     text-align: center;
     position: relative;
 }
@@ -48,6 +49,7 @@ $plugin-subtitle-color:         #525C63;
 
     .plugin__description {
         margin-bottom: $spacing-unit / 2;
+        height: 4 * $inuit-base-font-size * ($inuit-base-line-height / $inuit-base-font-size);
     }
 
     .no-js .plugin__description {
@@ -58,7 +60,7 @@ $plugin-subtitle-color:         #525C63;
     .plugin__links {}
 
         .plugin__links li + li:before {
-            content: '\00A0\00B7\00A0';
+            content: '\00A0\00A0\00B7\00A0';
             font-weight: bold;
         }
 
@@ -74,10 +76,6 @@ $plugin-subtitle-color:         #525C63;
         position: absolute;
         top: -4px;
         right: -4px;
-    }
-
-    .plugin__description {
-        height: 4 * $inuit-base-font-size * ($inuit-base-line-height / $inuit-base-font-size);
     }
 
 }
