Work. Much Awesome. Wow!

--- a/assets/__scss/main.scss
+++ b/assets/__scss/main.scss
@@ -62,6 +62,7 @@
  */
 @import "components/header";
 @import "components/introduction";
+@import "components/featured";
 @import "components/filters";
 @import "components/plugins";
 @import "components/addplugin";
