--- a/assets/__scss/components/_header.scss
+++ b/assets/__scss/components/_header.scss
@@ -32,13 +32,19 @@ $header-section-background:     $base-link-color;
 
     .header__logo {
         background: $base-link-color;
-        border-radius: $base-box-round;
+        border-radius: 50%;
         box-shadow: 0px 5px 0px rgba(0, 0, 0, .1);
         padding: 10px;
         display: block;
         position: absolute;
         left: $spacing-unit;
         top: 0;
+
+        img {
+            border-radius: 50%;
+            width: 65px;
+            height: 65px;
+        }
     }
 
     .header__title {
