--- a/assets/__scss/main.scss
+++ b/assets/__scss/main.scss
@@ -65,6 +65,7 @@
 @import "components/featured";
 @import "components/filters";
 @import "components/plugins";
+@import "components/error";
 @import "components/addplugin";
 @import "components/footer";
 
