--- a/assets/__scss/components/_addplugin.scss
+++ b/assets/__scss/components/_addplugin.scss
@@ -39,9 +39,18 @@ $addplugin-text-color--bold:    $introduction-text-color--bold;
     }
 
     .addplugin__description {
-        //color: $addplugin-text-color;
         @include font-size(20px);
         font-weight: 300;
+        margin: 0 auto $spacing-unit;
+        max-width: 80%;
+
+        @include media-query(lap-and-up) {
+            max-width: 60%;
+        }
+
+        @include media-query(desk) {
+            max-width: 40%;
+        }
     }
 
     .addplugin__button {
