--- a/assets/__scss/objects/_icon.scss
+++ b/assets/__scss/objects/_icon.scss
@@ -36,11 +36,23 @@
 .icon--video:before {
     content: "\e601";
 }
+.icon--tags:before {
+    content: "\e610";
+}
+.icon--payment:before {
+    content: "\e611";
+}
 .icon--location:before {
     content: "\e609";
 }
 .icon--calendar:before {
     content: "\e602";
+}
+.icon--mobile:before {
+    content: "\e612";
+}
+.icon--users:before {
+    content: "\e613";
 }
 .icon--quotes:before {
     content: "\e603";
@@ -54,8 +66,20 @@
 .icon--generic:before {
     content: "\e60a";
 }
+.icon--cloud:before {
+    content: "\e614";
+}
+.icon--link:before {
+    content: "\e615";
+}
+.icon--star:before {
+    content: "\e616";
+}
 .icon--heart:before {
     content: "\e60d";
+}
+.icon--loop:before {
+    content: "\e617";
 }
 .icon--panel:before {
     content: "\e604";
@@ -71,4 +95,7 @@
 }
 .icon--twitter:before {
     content: "\e608";
+}
+.icon--feed:before {
+    content: "\e618";
 }
