Twitter icon & mobile optimizations

--- a/assets/__scss/main.scss
+++ b/assets/__scss/main.scss
@@ -61,6 +61,7 @@
  * #COMPONENTS
  */
 @import "components/header";
+@import "components/social-nav";
 @import "components/introduction";
 @import "components/featured";
 @import "components/filters";
