--- a/assets/__scss/components/_header.scss
+++ b/assets/__scss/components/_header.scss
@@ -28,17 +28,22 @@ $header-section-background:     $base-link-color;
  * #HEADER
  */
 
-.header {}
+.header {
+    text-align: center;
+}
 
     .header__logo {
         background: $base-link-color;
         border-radius: 50%;
         box-shadow: 0px 5px 0px rgba(0, 0, 0, .1);
         padding: 10px;
-        display: block;
-        position: absolute;
-        left: $spacing-unit;
-        top: 0;
+        display: inline-block;
+
+        @include media-query(lap-and-up) {
+            position: absolute;
+            left: $spacing-unit;
+            top: 0;
+        }
 
         img {
             border-radius: 50%;
@@ -51,6 +56,25 @@ $header-section-background:     $base-link-color;
         @include font-size(24px, false);
         line-height: 1.5;
         font-weight: 600;
-        margin: 0 0 0 100px;
+        margin: $spacing-unit 0 0;
         color: #ffffff;
+
+        @include media-query(lap-and-up) {
+            float: left;
+            text-align: left;
+            margin: 0 0 0 100px;
+        }
+    }
+
+    .header__social {
+        @include font-size(16px, false);
+        line-height: 2.25;
+        margin: ($spacing-unit / 2) 0 0;
+        color: #ffffff;
+
+        @include media-query(lap-and-up) {
+            text-align: right;
+            float: right;
+            margin: 0;
+        }
     }
