Added Imgsrc, Tagslug & Tagunslug plugins

--- a/assets/__scss/objects/_icon.scss
+++ b/assets/__scss/objects/_icon.scss
@@ -90,7 +90,7 @@
 .icon--text:before {
     content: "\e606";
 }
-.icon--tags:before {
+.icon--markup:before {
     content: "\e607";
 }
 .icon--twitter:before {
