--- a/assets/__scss/components/_info.scss
+++ b/assets/__scss/components/_info.scss
@@ -39,6 +39,10 @@
         }
     }
 
+    .report__meta {
+        margin-bottom: $spacing-unit;
+    }
+
     .info__meta__item {
         font-weight: 600;
         margin: 0;
@@ -60,4 +64,10 @@
             float: right;
             margin-bottom: ($spacing-unit / 2);
         }
+    }
+
+    .info__report {
+        text-align: right;
+        font-size: 0.8em;
+        margin-bottom: 0;
     }
