--- a/assets/__scss/components/_info.scss
+++ b/assets/__scss/components/_info.scss
@@ -2,6 +2,14 @@
  * $INFO
  */
 
+/**
+ * #LOCAL VARIABLES
+ */
+$info-button-background:            #445467;
+$info-button-background-shade:      #2c3e50;
+$info-button-text-color:            #ffffff;
+$info-button-vertical-padding:      $spacing-unit / 3;
+$info-button-horizontal-padding:    $spacing-unit / 1.5;
 
 /**
  * #SECTION OVERRIDES
@@ -24,7 +32,9 @@
  */
 .info {}
 
-    .info__headline{}
+    .info__headline{
+        clear: both;
+    }
 
     .info__description {
 
@@ -63,6 +73,23 @@
             display: inline;
             float: right;
             margin-bottom: ($spacing-unit / 2);
+        }
+    }
+
+    .info__button {
+        a {
+            background: $info-button-background;
+            border-radius: $base-box-round;
+            padding: $info-button-vertical-padding $info-button-horizontal-padding;
+            color: $info-button-text-color;
+            box-shadow: 0px 5px 0px $info-button-background-shade;
+            text-align: center;
+            display: block;
+
+            &:hover {
+                background: $info-button-background-shade;
+                box-shadow: 0px 5px 0px shade($info-button-background-shade, 20%);
+            }
         }
     }
 
