Updated plugins page and added text page type

--- a/assets/__scss/main.scss
+++ b/assets/__scss/main.scss
@@ -71,6 +71,7 @@
 @import "components/title";
 @import "components/info";
 @import "components/comments";
+@import "components/text";
 @import "components/error";
 
 
