--- a/assets/__scss/components/_info.scss
+++ b/assets/__scss/components/_info.scss
@@ -111,8 +111,17 @@ $info-button-horizontal-padding:    $spacing-unit / 1.5;
         }
     }
 
-    .info__report {
+    .info__links {
+        list-style: none;
         text-align: right;
         font-size: 0.8em;
-        margin-bottom: 0;
+        margin: 0;
+
+        li {
+            display: inline;
+        }
+
+        li + li:before {
+            content: '\00A0·\00A0'
+        }
     }
