--- a/assets/__scss/settings/_global.scss
+++ b/assets/__scss/settings/_global.scss
@@ -13,6 +13,7 @@ $base-font-color:               #303030;
 $base-box-round:                6px;
 
 $base-background-color:         #f0f0f0;
+$accent-background-color:       #e9e6e1;
 $base-link-color:               #ff4136;
 $base-link-attention-color:     tint($base-link-color, 10%);
 $base-heading-color:            #2c3e50;
